--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -635,7 +635,22 @@ input, select, textarea {
 			font-family: 'Font Awesome 5 Brands';
 		}
 
+#header .logo {
+    width: 5.5rem;
+    height: 5.5rem;
+    line-height: 5.5rem;
+    border: solid 1px #ffffff;
+    border-radius: 100%;
+    overflow: hidden; /* make image fit within the circle */
+}
 /* Image */
+
+#header .logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* make image cover the entire area */
+    border-radius: 50%; /* circular image */
+}
 
 	.image {
 		border-radius: 4px;
@@ -710,6 +725,18 @@ input, select, textarea {
 				margin: 2rem 0;
 			}
 
+			#header .logo {
+			        width: 4.75rem;
+			        height: 4.75rem;
+			        line-height: 4.75rem;
+    			}
+
+			#header .logo img {
+			        width: 100%;
+			        height: 100%;
+			        object-fit: cover;
+			        border-radius: 50%;
+			}
 		}
 
 		@media screen and (max-width: 480px) {
@@ -717,8 +744,19 @@ input, select, textarea {
 			.image.main {
 				margin: 1.5rem 0;
 			}
-
-		}
+			#header .logo {
+			        width: 4rem; /* Adjust the size as needed */
+			        height: 4rem;
+			        line-height: 4rem;
+		    	}
+		
+			#header .logo img {
+			    	width: 100%;
+			        height: 100%;
+			        object-fit: cover;
+			        border-radius: 50%;
+			    }
+			}
 
 /* List */
 
